[package]
name = "auth-uservice"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
async-trait = "0.1.56"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
derive_builder = "0.11.2"
tokio = "1.19.2"
thiserror = "1.0.31"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
serde_json = "1.0.82"
log = "0.4.17"
sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

[dev-dependencies]
itertools = "0.10.3"
